cmake_minimum_required(VERSION 3.16)

project(VKT1OF2-SAMPO LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(VKT1OF2-SAMPO main.cpp)

include(GNUInstallDirs)
install(TARGETS VKT1OF2-SAMPO
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
